--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,4 +1,3 @@
-
 .parallax {
   perspective: 100px;
   height: 100%;
@@ -49,69 +48,77 @@
   transform: translateZ(-450px) scale(5.5);
 }
 
-.parallax_layer_1{
-  img{
-    content:var(--paralax1);
+.parallax_layer_1 {
+  img {
+    content: var(--paralax1);
   }
-  
+
   transform: translateZ(-400px) scale(5);
 }
 
 .parallax_layer_2 {
-  img{
+  img {
     content: var(--paralax2);
   }
+
   transform: translateZ(-350px) scale(4.5);
 }
 
 .parallax_layer_3 {
-  img{
+  img {
     content: var(--paralax3);
   }
+
   transform: translateZ(-300px) scale(4);
 }
 
 .parallax_layer_4 {
-  img{
+  img {
     content: var(--paralax4);
   }
+
   transform: translateZ(-250px) scale(3.5);
 }
 
 .parallax_layer_5 {
-  img{
+  img {
     content: var(--paralax5);
   }
+
   transform: translateZ(-200px) scale(3);
 }
 
 .parallax_layer_6 {
-  img{
+  img {
     content: var(--paralax6);
   }
+
   transform: translateZ(-150px) scale(2.5);
 }
 
 .parallax_layer_7 {
-  img{
+  img {
     content: var(--paralax7);
   }
+
   transform: translateZ(-100px) scale(2);
 }
 
 .parallax_layer_8 {
-  img{
+  img {
     content: var(--paralax8);
   }
+
   transform: translateZ(-50px) scale(1.5);
 }
 
 .parallax_layer_9 {
-  img{
+  img {
     content: var(--paralax9);
   }
+
   transform: translateZ(0px) scale(1);
-  
+
 }
 
 .animated_text {
@@ -128,14 +135,17 @@
   animation: animate 5s linear infinite;
   -webkit-background-clip: text;
   -webkit-text-fill-color: rgba(255, 255, 255, 0);
+
   @media only screen and (max-width: 480px) {
     margin-top: 50% !important;
     font-size: 2em !important;
   }
+
   @media only screen and (min-width: 481px) and (max-width:1024px) {
     margin-top: 50% !important;
     font-size: 4em !important;
   }
+
   @media only screen and (min-width: 1025px) {
     margin-top: 0% !important;
     font-size: 4em !important;
@@ -161,6 +171,7 @@
   0% {
     background-position: -500%;
   }
+
   100% {
     background-position: 500%;
   }
@@ -171,47 +182,48 @@
   margin-right: auto;
   margin-bottom: 0px;
   margin-left: auto;
-	width: 200px;
-	height: 200px;
-	background-color: #FFDE00;
-	border-radius: 50%;
-	box-shadow:
-		0 0 0 20px #FFDE0080,
-		0 0 0 40px #FFDE0040,
-		0 0 0 60px #FFDE0020,
-		0 0 0 80px #FFDE0010,
-		0 0 0 100px #FFDE0000,
-		0 0 40px 100px #FFDE0010;
-	animation:
-		sunrise 2s infinite linear forwards,
-		rays 2s 2s infinite linear;
+  width: 200px;
+  height: 200px;
+  background-color: #FFDE00;
+  border-radius: 50%;
+  box-shadow:
+    0 0 0 20px #FFDE0080,
+    0 0 0 40px #FFDE0040,
+    0 0 0 60px #FFDE0020,
+    0 0 0 80px #FFDE0010,
+    0 0 0 100px #FFDE0000,
+    0 0 40px 100px #FFDE0010;
+  animation:
+    sunrise 2s infinite linear forwards,
+    rays 2s 2s infinite linear;
 }
 
 @keyframes sunrise {
-	0% {
-		box-shadow: none;
-	}
+  0% {
+    box-shadow: none;
+  }
 }
 
 @keyframes rays {
-	0% {
-		box-shadow: 
-		0 0 0 0 #FFDE0080,
-		0 0 0 20px #FFDE0080,
-		0 0 0 40px #FFDE0040,
-		0 0 0 60px #FFDE0020,
-		0 0 0 80px #FFDE0010,
-		0 0 40px 100px #FFDE0010;
-	}
-	100% {
-		box-shadow: 
-		0 0 0 20px #FFDE0080,
-		0 0 0 40px #FFDE0040,
-		0 0 0 60px #FFDE0020,
-		0 0 0 80px #FFDE0010,
-		0 0 0 100px #FFDE0000,
-		0 0 40px 100px #FFDE0010;
-	}
+  0% {
+    box-shadow:
+      0 0 0 0 #FFDE0080,
+      0 0 0 20px #FFDE0080,
+      0 0 0 40px #FFDE0040,
+      0 0 0 60px #FFDE0020,
+      0 0 0 80px #FFDE0010,
+      0 0 40px 100px #FFDE0010;
+  }
+
+  100% {
+    box-shadow:
+      0 0 0 20px #FFDE0080,
+      0 0 0 40px #FFDE0040,
+      0 0 0 60px #FFDE0020,
+      0 0 0 80px #FFDE0010,
+      0 0 0 100px #FFDE0000,
+      0 0 40px 100px #FFDE0010;
+  }
 }
 
 .moon {
@@ -219,19 +231,19 @@
   margin-right: auto;
   margin-bottom: 0px;
   margin-left: auto;
-	width: 200px;
-	height: 200px;
-	border-radius: 50%;
-	background: rgb(207, 207, 212);
-	box-shadow: 0 0 5px #d3b3fc, 0 0 25px #f1edf7, 0 0 50px #f2f0f5,
-		0 0 100px #c9b3fc, 0 0 170px #999aad, inset 0 5px 12px 26px #f5f5f5,
-		inset -2px 8px 15px 36px #e6e6db;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: rgb(207, 207, 212);
+  box-shadow: 0 0 5px #d3b3fc, 0 0 25px #f1edf7, 0 0 50px #f2f0f5,
+    0 0 100px #c9b3fc, 0 0 170px #999aad, inset 0 5px 12px 26px #f5f5f5,
+    inset -2px 8px 15px 36px #e6e6db;
 }
 
 .scroll_down {
   position: absolute;
   left: 50%;
-  bottom:40px;
+  bottom: 40px;
   display: block;
   text-align: center;
   font-size: 20px;
@@ -248,26 +260,58 @@
   -moz-transform: translate(-50%, 0%) rotate(45deg);
   transform: translate(-50%, 0%) rotate(45deg);
   -webkit-animation: fade_move_down 4s ease-in-out infinite;
-  -moz-animation:    fade_move_down 4s ease-in-out infinite;
-  animation:         fade_move_down 4s ease-in-out infinite;
+  -moz-animation: fade_move_down 4s ease-in-out infinite;
+  animation: fade_move_down 4s ease-in-out infinite;
 }
 
 
 /*animated scroll arrow animation*/
 @-webkit-keyframes fade_move_down {
-  0%   { -webkit-transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
-  50%  { opacity: 1;  }
-  100% { -webkit-transform:translate(0,10px) rotate(45deg); opacity: 0; }
+  0% {
+    -webkit-transform: translate(0, -10px) rotate(45deg);
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: translate(0, 10px) rotate(45deg);
+    opacity: 0;
+  }
 }
+
 @-moz-keyframes fade_move_down {
-  0%   { -moz-transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
-  50%  { opacity: 1;  }
-  100% { -moz-transform:translate(0,10px) rotate(45deg); opacity: 0; }
+  0% {
+    -moz-transform: translate(0, -10px) rotate(45deg);
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    -moz-transform: translate(0, 10px) rotate(45deg);
+    opacity: 0;
+  }
 }
+
 @keyframes fade_move_down {
-  0%   { transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
-  50%  { opacity: 1;  }
-  100% { transform:translate(0,10px) rotate(45deg); opacity: 0; }
+  0% {
+    transform: translate(0, -10px) rotate(45deg);
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: translate(0, 10px) rotate(45deg);
+    opacity: 0;
+  }
 }
 
 .text_custom {
@@ -276,9 +320,10 @@
 
 .text_custom_1 {
   color: var(--shadowDark);
-  font-size: 24px 
+  font-size: 24px
 }
-.card{
+
+.card {
   padding: 5px;
   margin: 10px;
 }
@@ -326,6 +371,6 @@
 
 .card_img_top {
   width: 100%;
-  max-height: 15vw;
+  max-height: 185px;
   object-fit: cover;
 }
