--- a/peterfence-fe/styles/Home.module.scss
+++ b/peterfence-fe/styles/Home.module.scss
@@ -242,7 +242,7 @@
 
 .scroll_down {
   position: absolute;
-  left: 50%;
+  left: 49.5%;
   bottom: 40px;
   display: block;
   text-align: center;
@@ -255,7 +255,6 @@
   border-bottom: 2px solid #fff;
   border-right: 2px solid #fff;
   z-index: 9;
-  left: 50%;
   -webkit-transform: translate(-50%, 0%) rotate(45deg);
   -moz-transform: translate(-50%, 0%) rotate(45deg);
   transform: translate(-50%, 0%) rotate(45deg);
@@ -373,4 +372,138 @@
   width: 100%;
   max-height: 185px;
   object-fit: cover;
+}
+
+.container_text {
+  display: grid;
+  place-items: center;  
+  text-align: center;
+}
+.title_text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+  font-size: 7vw;
+  text-transform: uppercase;
+  z-index: 999 !important;
+}
+.title_word {
+  animation: color-animation 2s linear infinite;
+}
+
+.title_word_1 {
+  --color-1: var(--color-1-text);
+  --color-2: var(--color-2-text);
+  --color-3: var(--color-3-text);
+  --color-4: var(--color-4-text);
+}
+
+.title_word_2 {
+  --color-1: var(--color-2-text);
+  --color-2: var(--color-1-text);
+  --color-3: var(--color-4-text);
+  --color-4: var(--color-3-text);
+}
+
+@keyframes color-animation {
+  0%    {color: var(--color-1)}
+  24%   {color: var(--color-1)}
+  25%   {color: var(--color-2)}
+  50%   {color: var(--color-2)}
+  51%   {color: var(--color-3)}
+  74%   {color: var(--color-3)}
+  75%  {color: var(--color-4)}
+  100% {color: var(--color-4)}
+}
+
+.main{
+  max-width: 1200px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+.img {
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+.btn {
+  color: #ffffff;
+  padding: 0.8rem;
+  font-size: 14px;
+  text-transform: uppercase;
+  border-radius: 4px;
+  font-weight: 400;
+  display: block;
+  width: 100%;
+  cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: transparent;
+}
+
+.btn:hover {
+  background-color: rgba(255, 255, 255, 0.12);
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.cards_item {
+  display: flex;
+  padding: 1rem;
+}
+
+@media (min-width: 40rem) {
+  .cards_item {
+    width: 50%;
+  }
+}
+
+@media (min-width: 56rem) {
+  .cards_item {
+    width: 33.3333%;
+  }
+}
+
+.card {
+  background-color: var(--backgroundColor);
+  border-radius: 0.25rem;
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  padding: 0;
+}
+
+.card_content {
+  padding: 1rem;
+  background: linear-gradient(to bottom left, var(--gradient2) 40%, var(--gradient1) 100%);
+}
+
+.card_title {
+  color: #ffffff;
+  font-size: 1.1rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  margin: 0px;
+}
+
+.card_text {
+  color: #ffffff;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  margin-bottom: 1.25rem;    
+  font-weight: 400;
+}
+.made_by{
+  font-weight: 400;
+  font-size: 13px;
+  margin-top: 35px;
+  text-align: center;
 }
