--- a/peterfence-fe/styles/Home.module.scss
+++ b/peterfence-fe/styles/Home.module.scss
@@ -369,14 +369,17 @@
 }
 
 .container_text {
-  display: grid;
-  place-items: center;  
-  text-align: center;
+  position: absolute;
+    bottom: 90px;
+    display: grid;
+    text-align: right;
+    margin-left: 167px;
+    padding-right: 0 !important;
 }
 .title_text {
   font-family: "Montserrat", sans-serif;
   font-weight: 800;
-  font-size: 7vw;
+  font-size: 5vw;
   text-transform: uppercase;
   z-index: 999 !important;
 }
