--- a/peterfence-fe/styles/Home.module.scss
+++ b/peterfence-fe/styles/Home.module.scss
@@ -371,6 +371,7 @@
 .container_text {
   position: absolute;
     bottom: 90px;
+    right: 5%;
     display: grid;
     text-align: right;
     padding-right: 0 !important;
