Rewrite frontend part

--- a/peterfence-fe/styles/Home.module.scss
+++ b/peterfence-fe/styles/Home.module.scss
@@ -370,7 +370,7 @@
 
 .container_text {
   position: absolute;
-    bottom: 90px;
+    bottom: 8%;
     right: 5%;
     display: grid;
     text-align: right;
