Rewrite frontend part

--- a/peterfence-fe/styles/globals.scss
+++ b/peterfence-fe/styles/globals.scss
@@ -1,6 +1,7 @@
 @import '~bootstrap/scss/bootstrap';
 @import './Header.module.scss';
 @import './Footer.module.scss';
+@import './Login.module.scss';
 :root {
   --shadowDark: #d2cdc8;
   --shadowLight: #e0dcd8;
